--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
     p{margin:0; letter-spacing:-.005em}
     .lede{font-size:var(--lede); line-height:1.55; letter-spacing:-.012em; max-width:64ch;}
     .eyebrow{font-family:var(--font-body); font-size:var(--t-15); letter-spacing:.18em; text-transform:uppercase; color:var(--muted);}
-    .tagline{font-family:var(--font-title); letter-spacing:.14em; text-transform:uppercase; font-size:var(--t-15); color:var(--muted); margin-top:.35rem;}
+    .tagline{font-family:var(--font-title); letter-spacing:.14em; text-transform:uppercase; font-size:var(--t-15); color:var(--muted); margin-top:.35rem; display:flex; flex-direction:column; gap:.15rem;}
     .caption{font-size:var(--t-15); letter-spacing:.14em; text-transform:uppercase; color:var(--muted);}
     .display{font-family:var(--font-title); letter-spacing:-.04em; line-height:.90;}
     .display-xl{font-size:var(--t-225);}
